# ottergrad

./: README.md  autogradtest.ipynb  demo.ipynb  pyproject.toml  setup.cfg  setup.py
.ipynb_checkpoints/: autogradtest-checkpoint.ipynb
Ottergrad/: __init__.py  activation.py  autograd.py  demo.py  optimizers.py  otternumpy.py
test/: demo.ipynb
