[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "Cython==0.29.24",  # Note: keep in sync with tools/cythonize.py
    "matplotlib>=3.2.2",
    "numpy>=1.21.1",
    "setuptools>=42",
    "pytest-benchmark>=3.4.1",
    "pytest>=6.2.4",
    "wheel",
    "cuda-python"
]